# updog

./: .gitignore  .health-baseline.json  .health-report.md  AGENTS.md  CLAUDE.md  Cargo.toml  Cruxfile  README.md  justfile
.config/: rail.toml
.ctx/: HANDOFF.tools.yaml  HANDOFF.updog.yaml
.github/workflows/: ci.yml  release.yml
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: diagnosis.rs  feedback.rs  halo.rs  handoff.rs  lib.rs  source.rs  traces.rs
crates/ail/: Cargo.toml
crates/ail/.ctx/: HANDOFF.agent-improvement.test.md
crates/ail/src/: lib.rs  main.rs  phase.rs  run.rs  ui.rs
crates/ail/src/adapters/: coursers.rs  mod.rs
crates/ail/src/phases/: mod.rs  p1.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs
crates/ail/tests/: demo.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse_discover_output/: empty.json  single_intercepted.json
fuzz/fuzz_targets/: fuzz_parse_discover_output.rs
xtask/: Cargo.toml
xtask/src/: main.rs
