[workspace]
members = ["crates/agent-loop", "crates/ail", "xtask"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/89jobrien/updog"
rust-version = "1.87.0"

[workspace.dependencies]
agent-loop          = { path = "crates/agent-loop", version = "^0.1.0" }
anyhow              = "1"
chrono              = { version = "0.4", features = ["serde"] }
clap                = { version = "4", features = ["derive"] }
console             = "0.15"
miette              = { version = "7", features = ["derive", "fancy"] }
proptest = "^1.11.0" #unified
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tempfile            = "3"
thiserror           = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
