[package]
name        = "agent-loop"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true

[dev-dependencies]
proptest = "1"

[dependencies]
chrono     = { workspace = true }
miette     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
