[package]
name        = "ail"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true

[[bin]]
name = "ail"
path = "src/main.rs"

[dependencies]
agent-loop = { workspace = true }
anyhow     = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
