[package]
name        = "ail"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true

[lib]
name = "ail"
path = "src/lib.rs"

[[bin]]
name = "ail"
path = "src/main.rs"

[dependencies]
agent-loop         = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
console            = { workspace = true }
miette             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = { workspace = true } #unified
tempfile = { workspace = true }
